--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
