--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
+    "@types/react-redux": "^7.1.33",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
