--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
