--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
-    "react-redux": "^9.1.0",
-    "react-toastify": "^10.0.4"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
