--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@types/node": "^20",
