--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^31.2.0",
+    "@ag-grid-community/core": "31.2.0",
+    "@ag-grid-community/react": "^31.2.0",
+    "@ag-grid-community/styles": "^31.2.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -42,12 +46,13 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.291.0",
-    "next": "^14.0.1",
+    "next": "^14.1.4",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
