--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.1.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
