--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^9.1.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
+    "sweetalert2": "^11.10.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
